--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ html, body {
 	height: 100%;
 }
 body {
-	font-family: "Lato";
+	font-family: "Handwritten";
 	font-weight: 300;
 	font-size: 16px;
 	color: #555;
@@ -108,8 +108,13 @@ a img {
 	background: #f5f5f5;
 }
 /* Titles */
-h1, h2, h3, h4, h5, h6 {
-	font-family: "Raleway";
+h1 {
+	font-family: "Sverige";
+	font-weight: 200;
+	color: #333;
+}
+h2, h3, h4, h5, h6 {
+	font-family: "Handwritten";
 	font-weight: 200;
 	color: #333;
 }
@@ -141,7 +146,7 @@ em {
 pre {
 	background: #ebebeb;
 	border: none;
-	font-family: "Monaco";
+	font-family: "Handwritten";
 	font-size: 16px;
 	color: #666;
 	padding: 20px;
@@ -293,7 +298,7 @@ a:before, a:after {
 	text-align: center;
 }
 #greywrap .btn {
-	font-family: "Raleway";
+	font-family: "Handwritten";
 	font-weight: 300;
 	font-size: 20px;
 	margin: 0 25px;
