--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,7 +210,7 @@ a:before, a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/header_bg.jpg) no-repeat center top;
+	background: url(../img/wood.png) no-repeat center top;
 	margin-top: -50px;
 	padding-top: 120px;
 	text-align: center;
