--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,7 +226,7 @@ a:before, a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/wood-small.png) no-repeat center top;
+	background: url(../img/wood.jpg) no-repeat center top;
 	margin-top: -50px;
 	padding-top: 120px;
 	text-align: center;
