--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -225,7 +225,7 @@ a:before, a:after {
    Wrap Sections
    ========================================================================== */
 
-#headerwrap {
+#home.headerwrap {
 	background: url(../img/wood.jpg) no-repeat center top;
 	margin-top: -50px;
 	padding-top: 120px;
@@ -245,7 +245,7 @@ a:before, a:after {
 	padding-bottom: 100px;
 	text-shadow: 2px 2px 2px #000000;
 }
-#headerwrap h1 {
+#home.headerwrap h1 {
 	color: #ffffff;
 	font-size: 100px;
 	font-size: 10vw;
@@ -254,14 +254,14 @@ a:before, a:after {
 	letter-spacing: 3px;
 	line-height: 1.6;
 }
-#headerwrap p {
+#home.headerwrap p {
 	color: #fff;
 	font-size: 30px;
 	font-weight: 300;
 	text-align: center;
 	letter-spacing: 1px;
 }
-#headerwrap .icon {
+#home.headerwrap .icon {
 	color: #ffffff;
 	margin-top: 90px;
 	padding-bottom: 30px;
@@ -270,7 +270,7 @@ a:before, a:after {
 	font-weight: bold;
 	text-shadow: 0px 20px 7px #3da8ae;
 }
-#headerwrap .btn {
+#home.headerwrap .btn {
 	font-weight: 500;
 	font-size: 20px;
 	margin: 50px 0;
@@ -280,7 +280,7 @@ a:before, a:after {
 	box-shadow: -5px -5px 20px #3da8ae;
 	border: 0;
 }
-#headerwrap .btn:hover, #headerwrap .btn:focus {
+#home.headerwrap .btn:hover, #home.headerwrap .btn:focus {
 	background-color: #e9af03;
 	outline: 0px;
 }
@@ -511,7 +511,7 @@ body .header {
 }
 
 @media screen and (max-width:769px) {
-#headerwrap p {
+#home.headerwrap p {
 	font-size: 30px;
 	line-height: 38px;
 }
