--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,7 +248,8 @@ a:before, a:after {
 #home.headerwrap h1 {
 	color: #ffffff;
 	font-size: 100px;
-	font-size: 10vw;
+	padding-top: 20px;
+	font-size: 9vw;
 	font-weight: 400;
 	text-align: center;
 	letter-spacing: 3px;
