--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,22 +304,29 @@ a:before, a:after {
 #schedule p {
 	text-align: justify;
 }
-#gifts {
+#hotels {
 	background: #fff;
+	padding: 60px 0;
+}
+#hotels img {
+	max-height: 100px;
+}
+#gifts {
+	background: #f5f5f5;
 	padding: 60px 0;
 }
 #gifts .btn-default {
 	border: 0;
 }
 #photos {
-	background: #f5f5f5;
+	background: #fff;
 	padding: 60px 0;
 }
 #photos p {
 	text-align: justify;
 }
 #print {
-	background: #fff;
+	background: #f5f5f5;
 	padding: 60px 0;
 }
 #print .btn-default {
