--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,7 +302,7 @@ a:before, a:after {
 	color: #ffbf00;
 }
 #schedule p {
-	text-align: justify;
+	text-align: center;
 }
 #hotels {
 	background: #fff;
