--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,8 +325,24 @@ a:before, a:after {
 #photos p {
 	text-align: justify;
 }
-#print {
+#songs {
 	background: #f5f5f5;
+	padding: 60px 0;
+}
+#songs label {
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 250px;
+    text-align: right;
+}
+#songs input {
+  display: inline-block;
+  float: left;
+  margin-left: 10px;
+}
+#print {
+	background: #fff;
 	padding: 60px 0;
 }
 #print .btn-default {
